transitioned a lot to tailwind

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,9 @@
     -webkit-text-fill-color: transparent;
   }
 }
+
+html,
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
