--- a/styles/global.css
+++ b/styles/global.css
@@ -26,7 +26,7 @@
   font-family: "Bungee Shade";
   font-style: normal;
   font-weight: 400;
-  font-display: optional;
+  font-display: swap;
   src: url(/fonts/bungee-shade.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
@@ -37,6 +37,11 @@
   .text-gradient {
     background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+  @media print {
+    .text-gradient {
+      -webkit-text-fill-color: inherit;
+    }
   }
 }
 
